--- a/css/pages/about-us.css
+++ b/css/pages/about-us.css
@@ -1014,7 +1014,61 @@
 
 }
 
-@media (max-width:1024px){
+@media (max-width:1080px){
+
+    body{
+        overflow-x: hidden;
+    }
+
+    .links li a, .action_btn-1, .action_btn{
+        display: none;
+    }
+
+    .navbar{
+    width:80% ;
+    }
+
+    .navbar .toggle_btn{
+        display: block;
+    }
+
+    .dropdown_menu{
+        display: block;
+        width: 80%;
+        margin-right: 4rem;
+        background:#FFFFFF ;
+    }
+
+    .dropdown_menu li a{
+        display: block;
+    }
+
+    .dropdown_menu .open{
+        height: 300px;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-items: center;
+        color:black;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
 
     .footer{
         background-color:#D7E5BE;
@@ -1217,6 +1271,19 @@
         width: unset;
     }
 
+    body{
+        overflow-x: hidden;
+    }
+
+    .dropdown_menu{
+        left: 2rem;
+        width: unset;
+    }
+
+    .open{
+        margin-right: 0;
+    }
+
 
     #left-space {
         margin-left:3rem;
@@ -1231,10 +1298,6 @@
         display: block;
     }
 
-    .open{
-        width: 350px;
-        height: 320px;
-    }
     .hero h1{
         text-align: center;
     }
@@ -1394,6 +1457,7 @@
     .footer {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
         padding: 10px;
         margin-left: 0rem;
         margin-top: 4rem;
@@ -1401,11 +1465,11 @@
     }
 
     .footer img{
-        margin-left: 1rem;
+        margin-left: 4rem;
     }
 
     .footer h5{
-        margin-left: 0rem;
+        margin-left: 4rem;
         margin-bottom: 1rem;
     }
 
@@ -1417,8 +1481,8 @@
 
     .footer-info-1 a {
         margin-bottom: 10px;
-        margin-left: 4rem;
-        text-align: justify; /* Justify text for these links */
+        margin-left: 0rem;
+        text-align: left; /* Justify text for these links */
     }
 
     .footer-info-2 {
@@ -1435,7 +1499,7 @@
     .footer-info-2-link,
     .footer-info-2-link-contact,
     .footer-info-2-link-newsletter {
-        margin-left: -3.5rem;
+        margin-left: -9rem;
         display: grid;
         grid-template-columns: 1fr;
         width: 100%;
