--- a/index.css
+++ b/index.css
@@ -4105,6 +4105,7 @@
         border-radius: 41px;
         font-size: 12px;
         margin-left: -4rem;
+        color: red;
     }
 
     .newsletter-user-info input{
