--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -1109,16 +1109,6 @@ hr{
 
     .dropdown_menu{
         display: none;
-        /* position: absolute;
-        right: 5rem;
-        top: 10px;
-        height: 0;
-        width: 400px;
-        background: rgba(255, 255, 255, 0.1);
-        backdrop-filter: blur(15px);
-        border-radius: 10px;
-        overflow: hidden; */
-
     }
 
     .toggle_btn{
@@ -1485,16 +1475,6 @@ hr{
  
      .dropdown_menu{
          display: none;
-         /* position: absolute;
-         padding: 1rem;
-         right: 2rem;
-         top: 150px;
-         height: 75vh;
-         width: 400px;
-         background:#FFFFFF;
-         backdrop-filter: blur(15px);
-         border-radius: 10px;
-         overflow: hidden; */
      }
 
      #first-info{
@@ -1703,8 +1683,6 @@ hr{
 
 @media(max-width:1080px){
     body{
-        margin-left: 2rem;
-        margin-right: 2rem;
         overflow-x: hidden;
     }
 
@@ -1716,24 +1694,55 @@ hr{
         display: block;
     }
 
-    .dropdown_menu{
-        display: block;
-        width: 80%;
-        margin-right: 4rem;
-        background:#FFFFFF ;
+    .navbar .toggle_btn i{
+        color: #000000;
     }
+
 
     .dropdown_menu li a{
         display: block;
     }
 
-    .toggle_btn i{
-        color: #000000;
+    .dropdown_menu{
+        left: 2rem;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 950px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
     }
 
-    .open{
-        right: 40px;
-        margin-right: 70px;
+    .dropdown_menu .open{
+        height: 300px;
+        margin-right: 2rem;
+        width: 4rem;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items:flex-start;
+        color:#000000;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
     }
 
     #first-info{
@@ -1962,32 +1971,69 @@ hr{
 @media(max-width:578px){
     body{
         overflow-x: hidden;
-        margin-left: 0;
-        margin-right: 0;
     }
 
     .dropdown_menu{
         left: 2rem;
-        width: unset;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 310px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
     }
 
-    .open{
-        margin-right: 15px;
+    .dropdown_menu .open{
+        height: 300px;
+        margin-right: 2rem;
+        width: 4rem;
     }
 
-    .dropdown_menu {
-        margin-left: 20px;
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items:flex-start;
+        color:#000000;
     }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
+
+    .navbar .toggle_btn{
+        display: block;
+    }
+
+    .navbar .toggle_btn i{
+        color: #000000;
+    }
+
 
     #first-info{
         margin-top: 10px;
-        margin-left: 2rem;
+        margin-left: 3rem;
+        overflow-x: hidden;
     }
 
     nav{
         width: 16rem;
-        margin-left: 2rem;
-        margin-right: -5rem;
+        margin-left: 3rem;
+        margin-right: 0rem;
     }
 
     nav ul li{
@@ -2000,11 +2046,11 @@ hr{
     }
 
     .frame-4{
-        margin-left: 2rem;
-        margin-right: -5rem;
-        margin-top: 7rem;
+        margin-left: 3rem;
+        margin-right: 0rem;
+        margin-top: 3rem;
         flex-direction: column;
-        width: 16rem;
+        width: 17rem;
 
     }
 
@@ -2019,18 +2065,20 @@ hr{
     .frame-4-img img{
         width:220px;
         height: 200px;
+        margin-left: 2rem;
     }
 
     .growth-plan-product{
         width: 1px;
-        margin-left:26rem;
-        margin-right: -5rem;
+        margin-left:11rem;
+        /* margin-right: -5rem; */
         flex-direction: column;
+        align-items: center;
     }
 
     .product-1{
-        width: 17rem;
-        margin-left: -31rem;
+        width: 18rem;
+        margin-left: 3rem;
         margin-bottom: -5rem;
     }
 
