--- a/index.css
+++ b/index.css
@@ -1401,7 +1401,7 @@
 
     .dropdown_menu{
         display: none;
-        position: absolute;
+        /* position: absolute;
         right: 5rem;
         top: 10px;
         height: 0;
@@ -1409,11 +1409,11 @@
         background: rgba(255, 255, 255, 0.1);
         backdrop-filter: blur(15px);
         border-radius: 10px;
-        overflow: hidden;
+        overflow: hidden; */
 
     }
 
-    .dropdown_menu .open{
+    /* .dropdown_menu .open{
         height: 100vh;
     }
 
@@ -1438,7 +1438,7 @@
         display: flex;
         margin-top: 20px;
         margin-left: 0rem;
-    }
+    } */
 
 
     .hero-info{
@@ -2483,7 +2483,6 @@
         color: #000000;
     }
 
-
     .footer-info-2-link-newsletter a{
         padding-right: 140px;
         padding-bottom: 10px;
@@ -2668,46 +2667,8 @@
 
     .dropdown_menu{
         display: none;
-        position: absolute;
-        padding: 1rem;
-        right: 2rem;
-        top: 150px;
-        height: 75vh;
-        width: 400px;
-        background: #FFFFFF;
-        backdrop-filter: blur(15px);
-        border-radius: 10px;
-        overflow: hidden;
     }
-
-    .dropdown_menu .open{
-        height: 300px;
-    }
-
-    .dropdown_menu li a{
-        padding: 0.7rem;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-items: center;
-        color:#000000;
-    }
-
-    .dropdown_menu .action_btn-1{
-        width: 100%;
-        justify-content: center;
-        display: flex;
-    }
-
-    .dropdown_menu .action_btn{
-        width: 100%;
-        justify-content: center;
-        display: flex;
-        margin-top: 20px;
-        margin-left: 0rem;
-    }
-
-    
+   
     .hero-info{
         display: flex;
         align-items: center;
@@ -3827,16 +3788,52 @@
         display: block;
     }
 
-    .dropdown_menu{
-        display: block;
-        width: 80%;
-        margin-right: 4rem;
-        background:#FFFFFF ;
-    }
-
     .dropdown_menu li a{
         display: block;
     }
+
+    .dropdown_menu{
+        left: 2rem;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 950px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
+    }
+
+    .dropdown_menu .open{
+        height: 300px;
+        margin-right: 2rem;
+        width: 4rem;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items:flex-start;
+        color:#000000;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
+    }
+
 }
 
 @media (max-width:578px){
@@ -3846,11 +3843,44 @@
 
     .dropdown_menu{
         left: 2rem;
-        width: unset;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 310px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
     }
 
-    .open{
-        margin-right: 0;
+    .dropdown_menu .open{
+        height: 300px;
+        margin-right: 2rem;
+        width: 4rem;
+    }
+
+    .dropdown_menu li a{
+        padding: 0.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items:flex-start;
+        color:#000000;
+    }
+
+    .dropdown_menu .action_btn-1{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+    }
+
+    .dropdown_menu .action_btn{
+        width: 100%;
+        justify-content: center;
+        display: flex;
+        margin-top: 20px;
+        margin-left: 0rem;
     }
 
     .hero-info{
