--- a/css/pages/blog-page.css
+++ b/css/pages/blog-page.css
@@ -1209,7 +1209,7 @@
         padding: 0.7rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-items: center;
         color:black;
     }
