--- a/css/pages/blog1.css
+++ b/css/pages/blog1.css
@@ -1277,7 +1277,7 @@ text-align: left;
         padding: 0.7rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
         justify-items: center;
         color:black;
     }
