--- a/css/pages/product.css
+++ b/css/pages/product.css
@@ -349,6 +349,7 @@ nav ul li:hover{
     position: relative;
     top: 60px;
     padding-left: 30px;
+    z-index: 1000;
 }
 
 .product-1 i{
@@ -1985,6 +1986,7 @@ hr{
         backdrop-filter: blur(15px);
         border-radius: 10px;
         overflow: hidden;
+        z-index: 1001;
     }
 
     .dropdown_menu .open{
@@ -2039,6 +2041,12 @@ hr{
     nav ul li{
         font-size: 12px;
     }
+
+    .product-1 p{
+        z-index: 1000;
+    }
+
+
 
     #first-element{
         width: 20px;
