--- a/css/pages/consulting-page.css
+++ b/css/pages/consulting-page.css
@@ -1619,47 +1619,54 @@
     }
 
     .consulting-buttons button{
-        width:120px
+        width:100px;
+        font-size: 13px;
     }
 
     .consulting-buttons button:hover{
-        width:120px
+        width:100px
     }
     
-    .newsletter{
-        margin-left: 0rem;
+    .newsletter h1{
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    .newsletter h5{
+        margin-left:10px;
+        margin-right:10px;
+        font-size: 14px;
+        line-height: 21px;
     }
 
     .newsletter-user-info{
-        width:317.76px;
-        height: 69px;
-        padding: 16px;
-        gap: 69px;
+        width: 17rem;
+        height: 52px;
+        top: 191px;
+        left: 20px;
+        padding: 10px 16.24px 10px 16px;
         border-radius: 64px;
-        padding: 0;
-        border: 1px solid #2E2E2E;
-        align-items: center;
     }
 
     .newsletter-user-info button{
-        width:119.76px;
-        height: 37px;
-        padding: 8px 16px 8px 16px;
-        gap: 8px;
+        width: 80px;
+        height: 32px;
+        padding: 4px 8px 4px 8px;
+        gap: 7px;
         border-radius: 41px;
-        margin-left: -3rem;
-        margin-right: 2rem;
-        font-size: 14px;
+        font-size: 11px;
+        margin-left: -6.5rem;
+
     }
 
     .newsletter-user-info input{
+        font-size: 14px;
+        text-align: left;
         background: transparent;
-        margin-left: 0rem;
     }
 
     .newsletter-user-info input::placeholder{
-        font-size: 14px;
-        margin-left: 0rem;
+        font-size: 12px;
     }
 
     .footer {
