--- a/css/pages/signup.css
+++ b/css/pages/signup.css
@@ -820,39 +820,41 @@ text-align: center;
         display: none;
     }
 
-    .navbar{
-    width:80% ;
-    }
-
     .navbar .toggle_btn{
         display: block;
-    }
-
-    .dropdown_menu{
-        display: block;
-        width: 80%;
-        margin-right: 0rem;
-        margin-left: 6rem;
-        background:#FFFFFF ;
     }
 
     .dropdown_menu li a{
         display: block;
     }
 
+    .dropdown_menu{
+        left: 2rem;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 850px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
+        margin-left: 2rem;
+    }
+
     .dropdown_menu .open{
         height: 300px;
-        right: 0;
-
+        margin-right: 2rem;
+        width: 4rem;
     }
 
     .dropdown_menu li a{
         padding: 0.7rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-items: center;
-        color:black;
+        align-items:flex-start;
+        color:#000000;
     }
 
     .dropdown_menu .action_btn-1{
@@ -923,7 +925,6 @@ text-align: center;
 @media (max-width: 578px) {
     body{
         overflow-x: hidden;
-
     }
 
     .navbar {
@@ -940,44 +941,49 @@ text-align: center;
         display: block;
     }
 
-    .dropdown_menu li a{
-        display: block;
-    }
-
     .dropdown_menu{
-        left: 2rem;
-        width: unset;
+        left: 0rem;
+        position: absolute;
+        padding: 1rem;
+        right: 2rem;
+        top: 150px;
+        height: 75vh;
+        width: 310px;
+        background: #FFFFFF;
+        backdrop-filter: blur(15px);
+        border-radius: 10px;
+        overflow: hidden;
     }
 
     .dropdown_menu .open{
-        height: 100px;
+        height: 300px;
+        margin-right: 2rem;
+        width: 4rem;
     }
 
     .dropdown_menu li a{
         padding: 0.7rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-items: center;
+        align-items:flex-start;
         color:#000000;
     }
 
     .dropdown_menu .action_btn-1{
-        width: 50%;
+        width: 100%;
         justify-content: center;
         display: flex;
-        margin-left: 4rem;
     }
 
     .dropdown_menu .action_btn{
-        width: 50%;
+        width: 100%;
         justify-content: center;
         display: flex;
         margin-top: 20px;
-        margin-left: 4rem;
+        margin-left: 0rem;
     }
 
-    #nav-bar ul {
+    /* #nav-bar ul {
         padding: 0;
         display: flex;
         flex-direction: column;
@@ -993,7 +999,7 @@ text-align: center;
         width: 100%;
         font-size: 16px;
         padding: 10px;
-    }
+    } */
 
     .signup-info {
         flex-direction: column;
