--- a/css/pages/manage-subscription.css
+++ b/css/pages/manage-subscription.css
@@ -119,6 +119,16 @@
     text-align: left;
     color: #2E2E2E;
 }
+.account-dashboard a{
+    text-decoration: none;
+    color: black;
+}
+
+.account-dashboard .focus{
+    color: #004C1F;
+    font-weight: 700;
+}
+
 
 .account-dashboard p{
     font-size: 16px;
